# wmi-ai-wrapper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  wmi-ai-wrapper.md
src/: __init__.py  agent.py  cli_agent.py  wmi_tools.py
src/wmi_cli/: __init__.py  cli.py  modules.py  wmi_wrapper.py
